# basicpkg

./: CHANGELOG.md  CLAUDE.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
basicpkg/: __init__.py  cli.py  main.py  stats.py  transform.py
basicpkg/commands/: stats.py  transform.py
samples/: sample.csv
tests/: conftest.py  test_cli.py  test_init.py  test_main.py  test_stats.py  test_transform.py
